# llm-intro-tg-rag

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
tgrag/: data.py  rag_evaluate.py  tg_bot.py  tg_parser.py
tgrag/example_data/: 1.json  2.json  3.json  4.json
